#!/usr/bin/env python
from optparse import OptionParser
from os.path import exists,expanduser
from commands import getstatusoutput
from github import Github
import json
import urllib2
from sys import exit
import re
from cms_static import CMSDIST_REPO_NAME,CMSSW_REPO_NAME
from github_utils import prs2relnotes, get_merge_prs

def format(s, **kwds): return s % kwds
#---------------------------------------------------------
# pyGithub
#--------------------------------------------------------

#
#defines the categories for each pr in the release notes
#
def add_categories_notes(notes, token):
  for pr_number in notes:
    request = urllib2.Request("https://api.github.com/repos/cms-sw/cmssw/issues/%s/labels" % str(pr_number),
                                  headers={"Authorization" : "token " + token})
    labels = json.loads(urllib2.urlopen(request).read())
    categories = [ l['name'].split('-')[0] for l in labels if re.match("^[a-zA-Z0-9]+[-](approved|pending|hold|rejected)$", l['name'])
                                                              and not re.match('^(tests|orp)-' , l['name'] ) ]
    if len(categories) == 0:
      print "no categories for:"
      print pr_number
    note = notes[pr_number]
    for cat in categories:
      note += " `%s` " % cat
    notes[pr_number] = note
  return notes

def get_cmssw_notes( previous_release , this_release ):
  if not exists("cmssw.git"):
    error, out = getstatusoutput("git clone --bare --reference /afs/cern.ch/cms/git-cmssw-mirror/cmssw.git git@github.com:cms-sw/cmssw.git")
    if error: parser.error("Error while checking out the repository:\n" + out)
  getstatusoutput("GIT_DIR=cmssw.git git fetch --all --tags")
  return prs2relnotes(get_merge_prs(previous_release, this_release, "cmssw.git", CMSSW_REPO))

#
# gets the changes in cmsdist, production architecture is the production architecture of the release
#
def get_cmsdist_notes( prev_cmsdist_tag , curr_cmsdist_tag ):
  if not exists("cmsdist.git"):