@@ -4,6 +4,8 @@ from argparse import ArgumentParser
 from sys import exit
 from os.path import expanduser
 from github import Github
+from socket import setdefaulttimeout
+setdefaulttimeout(120)
 
 if __name__ == "__main__":
   parser = ArgumentParser()
