@@ -1,6 +1,8 @@
 #!/usr/bin/env python
 from github import Github
 from os.path import expanduser
+from socket import setdefaulttimeout
+setdefaulttimeout(120)
 
 if __name__ == "__main__":
   gh = Github(login_or_token=open(expanduser("~/.github-token")).read().strip())
