@@ -3,6 +3,8 @@ from argparse import ArgumentParser
 from github import Github
 from os.path import expanduser
 from sys import exit
+from socket import setdefaulttimeout
+setdefaulttimeout(120)
 
 if __name__ == "__main__":
   parser = ArgumentParser()
