@@ -7,6 +7,8 @@ import re
 from sys import exit
 from releases import RELEASE_MANAGERS
 import itertools
+from socket import setdefaulttimeout
+setdefaulttimeout(120)
 
 # Prepare various comments regardless of whether they will be made or not.
 def format(s, **kwds):
